Change npm to yarn

--- a/package.json
+++ b/package.json
@@ -1,28 +1,17 @@
 {
   "name": "autoexpress",
   "version": "0.1.0",
+  "main": "index.tsx",
+  "repository": "https://github.com/jisuzkrist/autoexpress.git",
   "private": true,
   "homepage": "https://jisuzkrist.github.io/autoexpress/",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^5.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
-    "sass": "^1.64.1",
-    "typescript": "^5.1.6",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build",
-    "predeploy": "npm run build"
+    "predeploy": "yarn run build"
   },
   "eslintConfig": {
     "extends": [
