--- a/package.json
+++ b/package.json
@@ -32,16 +32,22 @@
     ]
   },
   "dependencies": {
+    "@types/gh-pages": "^3.2.1",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-slick": "^0.23.10",
     "@types/sass": "^1.45.0",
+    "@types/slick-carousel": "^1.6.37",
     "@types/typescript": "^2.0.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "sass": "^1.64.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^5.1.6"
   }
 }
